# ktechlab

./: .gitignore  CMakeLists.txt
cmake/modules/: FindGLib.cmake  FindGPSim.cmake
microbe/: CMakeLists.txt  btreebase.cpp  btreebase.h  btreenode.cpp  btreenode.h  expression.cpp  expression.h  instruction.cpp  instruction.h  main.cpp  microbe.cpp  microbe.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  pch.hpp  pic14.cpp  pic14.h  traverser.cpp  traverser.h  variable.cpp  variable.h
src/: CMakeLists.txt  canvas.cpp  canvas.h  canvas_private.h  canvasitemlist.cpp  canvasitemlist.h  canvasitemparts.cpp  canvasitemparts.h  canvasitems.cpp  canvasitems.h  canvasmanipulator.cpp  canvasmanipulator.h  cells.cpp  cells.h  circuitview.cpp  cnitem.cpp  cnitem.h  cnitemgroup.cpp  cnitemgroup.h  connector.cpp  connector.h  conrouter.cpp  conrouter.h  debugmanager.cpp  docmanager.cpp  docmanager.h  document.cpp  document.h  filemetainfo.cpp  filemetainfo.h  flowcodedocument.cpp  flowcodeview.cpp  flowcontainer.cpp  fpnode.cpp  fpnode.h  icndocument.cpp  icndocument.h  icnview.cpp  icnview.h  item.cpp  (+42 more)
src/common/: common.hpp  platform.hpp  types.hpp
src/contexthelp/: CMakeLists.txt
src/core/: CMakeLists.txt  diagnosticstyle.cpp  diagnosticstyle.h  logtofilemsghandler.cpp  logtofilemsghandler.h  main.cpp  pch.hpp
src/drawparts/: CMakeLists.txt  dpimage.cpp  dpimage.h  dpline.cpp  dpline.h  dptext.cpp  dptext.h  drawpart.cpp  drawpart.h  solidshape.cpp  solidshape.h
src/electronics/: CMakeLists.txt  circuitdocument.cpp  circuitdocument.h  circuiticndocument.cpp  circuiticndocument.h  component.cpp  component.h  componentmodellibrary.cpp  ecnode.cpp  ecnode.h  electronicconnector.cpp  gpsimprocessor.cpp  gpsimprocessor.h  pin.cpp  pin.h  subcircuits.cpp  switch.cpp  switch.h  wire.cpp  wire.h
src/electronics/components/: CMakeLists.txt  addac.cpp  addac.h  bidirled.cpp  bidirled.h  binarycounter.cpp  bussplitter.cpp  bussplitter.h  capacitor.cpp  capacitor.h  demultiplexer.cpp  demultiplexer.h  dependentsource.cpp  dependentsource.h  discretelogic.cpp  (+78 more)
src/flowparts/: CMakeLists.txt  callsub.cpp  count.cpp  delay.cpp  embed.cpp  flowconnectorlist.h  flowicndocument.cpp  flowicndocument.h  flowpart.cpp  flowpart.h  forloop.cpp  inputbutton.cpp  interrupt.cpp  junctionflownode.cpp  keypad.cpp  pinmapping.cpp  pinmapping.h  pulse.cpp  readport.cpp  repeat.cpp  setpin.cpp  sevenseg.cpp  sub.cpp  testpin.cpp  unary.cpp  varassignment.cpp  varcomparison.cpp  while.cpp  writeport.cpp
src/gui/: CMakeLists.txt  colorcombo.cpp  contexthelp.cpp  doublespinbox.cpp  itemselector.cpp  lineedit.cpp  logview.cpp  microselectwidget.cpp  microsettingsdlg.cpp  newfiledlg.cpp  oscilloscope.cpp  oscilloscopeview.cpp  outputmethoddlg.cpp  outputmethoddlg.h  probepositioner.cpp  programmerdlg.cpp  projectdlgs.cpp  richtexteditor.cpp  scopescreen.cpp  scopescreenview.cpp  scopeviewbase.cpp  settingsdlg.cpp  symbolviewer.cpp  symbolviewer.h
src/ktlqt3support/: CMakeLists.txt  ktlq3polygonscanner.cpp  ktlq3scrollview.cpp
src/languages/: CMakeLists.txt  asmparser.cpp  asmparser.h  externallanguage.cpp  externallanguage.h  flowcode.cpp  flowcode.h  gpasm.cpp  gpasm.h  gpdasm.cpp  gpdasm.h  gplib.cpp  gplib.h  gplink.cpp  gplink.h  language.cpp  language.h  languagemanager.cpp  languagemanager.h  microbe.cpp  microbe.h  picprogrammer.cpp  picprogrammer.h  processchain.cpp  processchain.h  sdcc.cpp  sdcc.h
src/math/: CMakeLists.txt  qmatrix.cpp  qmatrix.h  quickmatrix.cpp  quickmatrix.h  quickvector.cpp  quickvector.h  qvector.cpp  qvector.h
src/mechanics/: CMakeLists.txt  mechanicsdocument.cpp  mechanicsgroup.cpp  mechanicsitem.cpp  mechanicssimulation.cpp  mechanicsview.cpp
src/micro/: CMakeLists.txt
tests/loaded-icons/: generate-icon-names-list.sh  test-loaded-icons.cpp
tests/tests_app/: tests_app.cpp
tests/tests_compile/: test_compile.cpp
(+28 files in other folders)
